# ahc-agent

./: .gitignore  .pre-commit-config.yaml  =0.4.4  README.md  analysis.md  architecture.md  pyproject.toml  sample_problem.md  setup.py  todo.md  validate.sh
.github/: best_practices.md  pr_agent.toml
.github/workflows/: ci.yml
ahc_agent/: __init__.py  cli.py  config.py  default_config.yaml
ahc_agent/core/: analyzer.py  debugger.py  engine.py  heuristic_knowledge_base.py  knowledge.py  problem_logic.py  scorer.py  session_store.py  strategist.py  workspace_store.py
ahc_agent/services/: batch_service.py  docker_service.py  evaluation_setup_service.py  init_service.py  solve_service.py  status_service.py  submit_service.py
ahc_agent/utils/: docker_manager.py  file_io.py  llm.py  logging.py  scraper.py
ahc_agent_cli/: cli.py  config.py
ahc_agent_cli/core/: analyzer.py  debugger.py  engine.py  knowledge.py  problem_logic.py  strategist.py
ahc_agent_cli/utils/: docker_manager.py  file_io.py  llm.py  logging.py
docs/: README.ja.md  architecture.md  design_doc.md  development.md  todo.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_workspace_context.py  test_config.py  test_docker_manager.py  test_file_io.py  test_llm.py  test_scraper.py
tests/core/: test_heuristic_knowledge_base.py  test_problem_logic.py  test_scorer.py  test_session_store.py  test_workspace_store.py
tests/data/ahc001/: ahc_config.yaml  problem.md
tests/services/: __init__.py  test_batch_service.py  test_docker_service.py  test_init_service.py  test_solve_service.py  test_status_service.py  test_submit_service.py
